<resources>
    <string name="app_name">NAME</string>
    <string name="ninguna_cancion_seleccionada">Ninguna canción seleccionada</string>
    <string name="no_songs_loaded">No hay canciones cargadas</string>
    <string name="current_playlist">Lista de reproducción actual</string>
    <string name="close">Cerrar</string>
    <string name="time_format">%02d:%02d</string>
    <string name="time_format_with_minus">-%s</string>
    <string name="minutes_15">15 minutos</string>
    <string name="minutes_30">30 minutos</string>
    <string name="minutes_60">60 minutos</string>
    <string name="sleep_timer">Temporizador de apagado</string>
    <string name="cancel">Cancelar</string>
    <string name="timer_finished">Temporizador finalizado</string>
    <string name="timer_set">Temporizador establecido para %d minutos</string>
    <string name="timer_cancelled">Temporizador cancelado</string>
    <string name="create_new_playlist">Crear nueva lista</string>
    <string name="favorite_playlists">Listas de reproducción favoritas</string>
    <string name="load">Cargar</string>
    <string name="delete">Eliminar</string>
    <string name="delete_playlist_title">Eliminar lista de reproducción</string>
    <string name="delete_playlist_message">¿Seguro que quieres eliminar la lista de reproducción \"%s\"?</string>
    <string name="playlist_deleted">Lista de reproducción \"%s\" eliminada</string>
    <string name="load_some_songs_first">Carga algunas canciones primero</string>
    <string name="playlist_name_hint">Nombre de la lista</string>
    <string name="next">Siguiente</string>
    <string name="please_enter_a_name">Por favor, introduce un nombre</string>
    <string name="select_songs_for_playlist">Seleccionar canciones para \"%s\"</string>
    <string name="save">Guardar</string>
    <string name="no_songs_selected">No se seleccionaron canciones</string>
    <string name="playlist_saved">Lista de reproducción \"%s\" guardada</string>
    <string name="could_not_load_playlist">No se pudo cargar la lista de reproducción \"%s\"</string>
    <string name="playlist_loaded">Lista de reproducción \"%s\" cargada</string>
    <string name="playlist_is_empty">La lista de reproducción \"%s\" está vacía</string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="shuffle_on">Aleatorio activado</string>
    <string name="shuffle_off">Aleatorio desactivado</string>
    <string name="repeat_off">Repetir desactivado</string>
    <string name="repeat_all">Repetir todo</string>
    <string name="repeat_one">Repetir una</string>
    <string name="access_denied">Acceso denegado</string>
    <string name="unknown_song">Canción desconocida</string>
    <string name="previous">Anterior</string>
    <string name="pause">Pausa</string>
    <string name="play">Reproducir</string>
    <string name="footer_text">nano ©</string>
    <string name="initial_time">00:00</string>
    <string name="initial_time_minus">-00:00</string>
    <string name="open_files_description">Abrir archivos</string>
    <string name="shuffle_description">Modo aleatorio</string>
    <string name="repeat_description">Modo de repetición</string>
    <string name="play_pause_description">Reproducir o pausar</string>
    <string name="fast_forward_description">Avanzar 10 segundos</string>
    <string name="fast_rewind_description">Retroceder 10 segundos</string>
</resources>