<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/open_files_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/open_files_description"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:tint="@color/red" />

    <!-- Song Title -->


    <!-- Footer -->
    <TextView
        android:id="@+id/song_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/ninguna_cancion_seleccionada"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_files_button" />

    <TextView
        android:id="@+id/footer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/footer_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Bottom Control Row -->
    <LinearLayout
        android:id="@+id/bottom_controls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/timer_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/sleep_timer"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_timer"
            app:tint="@color/red" />

        <ImageButton
            android:id="@+id/current_playlist_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/current_playlist"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_playlist_play"
            app:tint="@color/red" />

        <ImageButton
            android:id="@+id/create_playlist_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/create_new_playlist"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_playlist_music"
            app:tint="@color/red" />
    </LinearLayout>

    <!-- Shuffle / Repeat / Timer Row -->
    <LinearLayout
        android:id="@+id/extra_controls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/bottom_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/shuffle_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/shuffle_description"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_shuffle"
            app:tint="@color/red" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/timer_countdown_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="14:59" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/repeat_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/repeat_description"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_repeat"
            app:tint="@color/red" />

    </LinearLayout>

    <!-- Progress Bar -->
    <LinearLayout
        android:id="@+id/progress_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/extra_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_time"
            android:textColor="@android:color/white" />

        <SeekBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:progressBackgroundTint="#444"
            android:progressTint="@color/red"
            android:thumbTint="@color/red" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_time_minus"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- Main Playback Controls -->
    <ImageButton
        android:id="@+id/play_pause_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/play_pause_description"
        android:padding="24dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toTopOf="@id/progress_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/red" />

    <ImageButton
        android:id="@+id/previous_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/previous"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_previous"
        app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
        app:layout_constraintEnd_toStartOf="@id/play_pause_button"
        app:layout_constraintTop_toTopOf="@id/play_pause_button"
        app:tint="@color/red" />

    <ImageButton
        android:id="@+id/next_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/next"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
        app:layout_constraintStart_toEndOf="@id/play_pause_button"
        app:layout_constraintTop_toTopOf="@id/play_pause_button"
        app:tint="@color/red" />

</androidx.constraintlayout.widget.ConstraintLayout>
